# deterministic-spc-agent

./: .gitignore  LICENSE  README.md  conda-lock.yml  dataset.md  environment.yml  multi_sensor_health_summary.py  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
docs/: architecture.md  cli.md  demo_gallery.md  developer_guide.md  json_schema_v0_2_0.md  planner_schema.md  verification.md
notebooks/: 02_data_setup.ipynb  03_process_prototype.ipynb  04_run_pipeline.ipynb  05_run_pipeline_phase_2.ipynb  06_test_exhaustive_full_run_list.ipynb  07_test_flows_full_run_list.ipynb  08_test_bad_schema.ipynb  09_demo_phase_2_full_run_list.ipynb  10_phase-4_agent_test.ipynb  10_phase-4_llm_demo_rev_1.ipynb  11_phase-4_llm_demo_rev_2.ipynb  12_phase-4_llm_demo_rev_3.ipynb  13_test_replot_semantic.ipynb  14_phase-4_llm_demo_rev_4.ipynb  15_phase-4_llm_demo_rev_5.ipynb  16_PM_History.ipynb
planner/: demo_gallery.json  demo_phase_2.json  demo_replot_2.json  static_plan.json  test_bad_schema.json  test_exhaustive.json  test_flows.json  test_replot.json  test_replot_latest.json  test_replot_latest_job_id.json  test_replot_latest_wrong_job.json  test_replot_nonexist_job_id.json
plots/: fleet_boxplot.py  fleet_time_trend.py  spc_time_series.py
preprocess/: multi_sensor_health_summary.py  pm_event_ooc_summary.py  spc_mode_rolling.py
runner/: registry.py  replot_run.py  run_lookup.py  run_one_run.py  sql_render.py  validate_plan.py
scripts/: build_planner_catalog.py  setup_data.py
spc_agent/: cli.py
sql/: entity_all_sensor_history.sql  (+5 more)
(+21 files in other folders)
